--- a/app/assets/stylesheets/master.scss
+++ b/app/assets/stylesheets/master.scss
@@ -1,1 +1,10 @@
 @import "bootstrap";
+
+.navbar-brand {
+    font-family: Arial;
+    color: red;
+}
+h1 {
+    color: red;
+    font-family: sans-serif;
+}
